Adding project references in Sql core nuget package (#2192)
* Adding nuspec

* fixing nuspec

* building hosting

* temp

* Reordering step

* fixing pack destination

* Fixing csproj

* Fixing build

* Fixing path

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -228,7 +228,7 @@ steps:
   inputs:
     ConnectedServiceName: 'Code Signing'
     FolderPath: '$(Build.SourcesDirectory)/src/Microsoft.SqlTools.SqlCore/bin/$(buildConfiguration)/netstandard2.0'
-    Pattern: 'Microsoft.SqlTools.SqlCore.*.dll'
+    Pattern: 'Microsoft.SqlTools.*.dll'
     signConfigType: inlineSignParams
     inlineOperation: |
      [
