--- a/src/Microsoft.SqlTools.ManagedBatchParser/Microsoft.SqlTools.ManagedBatchParser.csproj
+++ b/src/Microsoft.SqlTools.ManagedBatchParser/Microsoft.SqlTools.ManagedBatchParser.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<!-- Targeting both net7.0 and net472 so that other things such as PS cmdlets can use this
 		which need to support a wider range of machines -->
-		<TargetFrameworks>net7.0;net472</TargetFrameworks>
+		<TargetFrameworks>net7.0;net472;netstandard2.0</TargetFrameworks>
 		<LangVersion>9.0</LangVersion>
 		<Nullable>disable</Nullable>
 		<AssemblyName>Microsoft.SqlTools.ManagedBatchParser</AssemblyName>
@@ -37,7 +37,6 @@
 		<NuspecProperties>version=$(PackageVersion)</NuspecProperties>
 		<!-- Disable CA1852 (Seal internal types) as it depends on SrGen Tool -->
 		<NoWarn>$(NoWarn);CA1852</NoWarn>
-		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Data.SqlClient" />
