--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -89,6 +89,12 @@ steps:
     projects: test/Microsoft.Kusto.ServiceLayer.UnitTests
 
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet restore test/Microsoft.SqlTools.Authentication.UnitTests'
+  inputs:
+    command: restore
+    projects: test/Microsoft.SqlTools.Authentication.UnitTests
+
+- task: DotNetCoreCLI@2
   displayName: 'dotnet test test/Microsoft.SqlTools.ServiceLayer.UnitTests'
   inputs:
     command: test
@@ -102,6 +108,14 @@ steps:
     command: test
     projects: test/Microsoft.Kusto.ServiceLayer.UnitTests
     testRunTitle: Kusto.ServiceLayer.UnitTests
+    arguments: '--configuration $(buildConfiguration) --collect "XPlat Code Coverage"'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet test test/Microsoft.SqlTools.Authentication.UnitTests'
+  inputs:
+    command: test
+    projects: test/Microsoft.SqlTools.Authentication.UnitTests
+    testRunTitle: SqlTools.Authentication.UnitTests
     arguments: '--configuration $(buildConfiguration) --collect "XPlat Code Coverage"'
 
 - script: |
