--- a/azure-pipelines/integrationtests.yml
+++ b/azure-pipelines/integrationtests.yml
@@ -67,15 +67,23 @@ steps:
   - task: DotNetCoreCLI@2
     displayName: Building Integration Tests
     inputs:
-      projects: '**/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj, **/Microsoft.SqlTools.SqlCore.IntegrationTests.csproj'
+      projects: '**/*.IntegrationTests.csproj'
 
   - task: DotNetCoreCLI@2
-    displayName: Running Integration Tests
+    displayName: Running Service Layer Integration Tests
     inputs:
       command: test
-      projects: '**/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj, **/Microsoft.SqlTools.SqlCore.IntegrationTests.csproj'
+      projects: '**/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj'
       arguments: '--no-build'
       testRunTitle: 'SqlToolsService Integration Tests'
+  - task: DotNetCoreCLI@2
+    displayName: Running SqlCore Integration Tests
+    inputs:
+      command: test
+      projects: '**/Microsoft.SqlTools.SqlCore.IntegrationTests.csproj'
+      arguments: '--no-build'
+      testRunTitle: 'SqlToolsService Integration Tests'
+
     env:
       AzureStorageAccountKey: '$(sqltools-backup-url-tests-storageaccountkey)'
       AzureStorageAccountName: '$(sqltools-backup-url-tests-storageaccountname)'
