--- a/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj
+++ b/src/Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj
@@ -12,7 +12,8 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<AssemblyTitle>SqlTools SqlCore Library</AssemblyTitle>
 		<Description>Provides core sql functionality for SQL server editors like Object explorer, Query Execution and Scripting</Description>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<!--<TargetFramework>net462</TargetFramework>-->
+    <TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>8.0</LangVersion>
 		<AssemblyName>Microsoft.SqlTools.SqlCore</AssemblyName>
 		<Version>1.0.0</Version>
@@ -48,5 +49,10 @@
 			<Pack>true</Pack>
 			<PackagePath>lib\</PackagePath>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="Microsoft.Data.Tools.Sql.DesignServices">
+	    <HintPath>..\..\..\..\Users\karlb\.nuget\packages\microsoft.sqlserver.dacfx\162.1.142-preview\lib\netstandard2.1\Microsoft.Data.Tools.Sql.DesignServices.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 </Project>
