Enable ledger for managed instances

--- a/Packages.props
+++ b/Packages.props
@@ -21,23 +21,28 @@
 		<PackageReference Update="Microsoft.Identity.Client.Extensions.Msal" Version="4.56.0" />
 
 		<!-- Deprecated: TODO Migrate to Azure.ResourceManager -->
-		<PackageReference Update="Microsoft.Azure.Management.ResourceManager" Version="3.7.1-preview" />
+		<PackageReference Update="Microsoft.Azure.Management.ResourceManager"
+			Version="3.7.1-preview" />
 		<!-- Deprecated: TODO Migrate to Azure.ResourceManager.Sql -->
 		<PackageReference Update="Microsoft.Azure.Management.Sql" Version="1.41.0-preview" />
 
 		<!-- TODO: Upgrade package and use Token Credential design -->
-		<PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
-		<PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
+		<PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider"
+			Version="1.1.1" />
+		<PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider"
+			Version="170.21.0" />
 		<PackageReference Update="Microsoft.SqlServer.DacFx" Version="162.1.153-preview" />
 		<PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.2.2-preview" />
 		<PackageReference Update="Microsoft.Azure.Kusto.Data" Version="9.0.4" />
 		<PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
 		<PackageReference Update="Microsoft.SqlServer.Assessment" Version="[1.1.17]" />
-		<PackageReference Update="Microsoft.SqlServer.Migration.Assessment" Version="1.0.20230907.105" />
+		<PackageReference Update="Microsoft.SqlServer.Migration.Assessment"
+			Version="1.0.20230907.105" />
 		<PackageReference Update="Microsoft.SqlServer.Migration.Logins" Version="1.0.20230407.56" />
 		<PackageReference Update="Microsoft.SqlServer.Management.QueryStoreModel" Version="163.26.1" />
-		<PackageReference Update="Microsoft.SqlServer.Management.SqlParser" Version="170.9.0" />
-		<PackageReference Update="Microsoft.SqlServer.Migration.Tde" Version="1.0.0-preview.1.0.20230914.107" />
+		<PackageReference Update="Microsoft.SqlServer.Management.SqlParser" Version="170.15.0" />
+		<PackageReference Update="Microsoft.SqlServer.Migration.Tde"
+			Version="1.0.0-preview.1.0.20230914.107" />
 
 		<!-- Deprecated: TODO Migrate to Azure.Monitor.Query -->
 		<PackageReference Update="Microsoft.Azure.OperationalInsights" Version="1.0.0" />
@@ -52,20 +57,23 @@
 		<PackageReference Update="xunit" Version="2.5.1" />
 		<PackageReference Update="xunit.runner.visualstudio" Version="2.5.1" />
 		<PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-		<PackageReference Update="Microsoft.SqlServer.TransactSql.ScriptDom.NRT" Version="1.2.10202.1" />
+		<PackageReference Update="Microsoft.SqlServer.TransactSql.ScriptDom.NRT"
+			Version="1.2.10202.1" />
 		<PackageReference Update="Azure.Storage.Blobs" Version="12.18.0" />
 		<PackageReference Update="coverlet.collector" Version="6.0.0" />
 		<PackageReference Update="coverlet.msbuild" Version="6.0.0" />
 		<PackageReference Update="Microsoft.SqlServer.XEvent.XELite" Version="2023.1.30.3" />
 		<PackageReference Update="SkiaSharp" Version="2.88.6" />
-		<PackageReference Update="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.6" Condition="$([MSBuild]::IsOsPlatform('Linux'))" />
+		<PackageReference Update="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.6"
+			Condition="$([MSBuild]::IsOsPlatform('Linux'))" />
 	</ItemGroup>
 
-	<!-- When updating version of Dependencies in the below section, please also update the version in the following files:
+	<!-- When updating version of Dependencies in the below section, please also update the version
+	in the following files:
 		packages\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.nuspec-->
 	<ItemGroup>
 		<PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.1" />
-		<PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="170.18.0" />
+		<PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="170.21.0" />
 		<PackageReference Update="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Update="System.Configuration.ConfigurationManager" Version="7.0.0" />
 	</ItemGroup>
