--- a/test/Microsoft.SqlTools.Migration.IntegrationTests/Microsoft.SqlTools.Migration.IntegrationTests.csproj
+++ b/test/Microsoft.SqlTools.Migration.IntegrationTests/Microsoft.SqlTools.Migration.IntegrationTests.csproj
@@ -24,6 +24,7 @@
   </Choose>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.TestPlatform" VersionOverride="14.0.0" />
     <PackageReference Include="Moq" />
     <PackageReference Include="System.Net.Http" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
