--- a/Packages.props
+++ b/Packages.props
@@ -38,6 +38,7 @@
 		<PackageReference Update="Microsoft.SqlServer.Management.QueryStoreModel" Version="163.55.1" />
 		<PackageReference Update="Microsoft.SqlServer.Management.SqlParser" Version="170.9.0" />
 		<PackageReference Update="Microsoft.SqlServer.Migration.Tde" Version="1.0.0-preview.1.0.20230914.107" />
+		<PackageReference Update="Microsoft.SqlServer.SqlTargetProvisioning" Version="1.0.20240208.1" />
 
 		<!-- Deprecated: TODO Migrate to Azure.Monitor.Query -->
 		<PackageReference Update="Microsoft.Azure.OperationalInsights" Version="1.0.0" />
@@ -49,6 +50,7 @@
 		<PackageReference Update="nunit" Version="3.13.3" />
 		<PackageReference Update="nunit3testadapter" Version="4.5.0" />
 		<PackageReference Update="nunit.console" version="3.16.3" />
+		<PackageReference Include="Microsoft.VisualStudio.TestPlatform" Version="14.0.0" />
 		<PackageReference Update="xunit" Version="2.5.1" />
 		<PackageReference Update="xunit.runner.visualstudio" Version="2.5.1" />
 		<PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.7.2" />
