build error fix

--- a/src/Microsoft.SqlTools.Migration/Microsoft.SqlTools.Migration.csproj
+++ b/src/Microsoft.SqlTools.Migration/Microsoft.SqlTools.Migration.csproj
@@ -37,6 +37,14 @@
     <Compile Include="**\*.cs" Exclude="**/obj/**/*.cs" />
   </ItemGroup>
 	<ItemGroup>
+		<Compile Remove="..\..\..\Users\**\microsoft.sqlserver.sqltargetprovisioning\**\GeneralErrorModelResources.resx" />
+		<Compile Remove="..\..\..\Users\**\microsoft.sqlserver.sqltargetprovisioning\**\ErrorModelResources.resx" />
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="..\..\..\Users\**\microsoft.sqlserver.sqltargetprovisioning\**\GeneralErrorModelResources.resx" />
+		<EmbeddedResource Include="..\..\..\Users\**\microsoft.sqlserver.sqltargetprovisioning\**\ErrorModelResources.resx" />
+	</ItemGroup>
+	<ItemGroup>
 		<InternalsVisibleTo Include="Microsoft.SqlTools.Migration.IntegrationTests" />
 		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	</ItemGroup>
