--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -2,7 +2,7 @@ steps:
 - task: AzureKeyVault@1
   displayName: 'Azure Key Vault: ado-secrets'
   inputs:
-    azureSubscription: 'ADS Pipelines'
+    azureSubscription: 'STS Pipelines'
     KeyVaultName: 'ado-secrets'
     SecretsFilter: 'github-distro-mixin-password,ado-crossplatbuildscripts-password'
 
