--- a/azure-pipelines/release.yml
+++ b/azure-pipelines/release.yml
@@ -2,7 +2,7 @@ steps:
 - task: AzureKeyVault@1
   displayName: 'Azure Key Vault: ado-secrets'
   inputs:
-    azureSubscription: 'ClientToolsInfra_670062 (88d5392f-a34f-4769-b405-f597fc533613)'
+    azureSubscription: 'STS Pipelines' # this is the name of the service connection, which be found in mssqltools/CrossPlatBuildScripts ADO under Project Settings -> Service Connections
     KeyVaultName: 'ado-secrets'
     SecretsFilter: 'github-distro-mixin-password,ado-crossplatbuildscripts-password'
 
