--- a/src/Microsoft.Kusto.ServiceLayer/Microsoft.Kusto.ServiceLayer.csproj
+++ b/src/Microsoft.Kusto.ServiceLayer/Microsoft.Kusto.ServiceLayer.csproj
@@ -12,7 +12,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <DebugType>portable</DebugType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RuntimeIdentifiers>$(ToolsServiceTargetRuntimes)</RuntimeIdentifiers>
 	<!-- False alerts, disabled due to issue: https://github.com/dotnet/roslyn/issues/65850 -->
 	<NoWarn>$(NoWarn);CS8795</NoWarn>
@@ -26,7 +26,7 @@
 
   <PropertyGroup Condition="'$(BUILD_DOTNET_TOOL)' == 'true'">
     <PackageId>Microsoft.SqlServer.KustoServiceLayer.Tool</PackageId>
-    <PackageVersion>1.3.0</PackageVersion>
+    <PackageVersion>2.0.0</PackageVersion>
     <PackageDescription>.NET client Kusto Service application, usable as a dotnet tool. This package is intended to be used by internal applications only and should not be referenced directly.</PackageDescription>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>$(AssemblyName)</ToolCommandName>
@@ -35,14 +35,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.OperationalInsights" />
+    <PackageReference Include="Microsoft.Data.SqlClient" VersionOverride="5.2.0" />
     <PackageReference Include="Microsoft.SqlServer.DacFx" />
     <PackageReference Include="Microsoft.SqlServer.Management.SmoMetadataProvider" />
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" />
     <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" VersionOverride="8.0.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" />
     <PackageReference Include="Microsoft.Azure.Kusto.Data" />
-    <PackageReference Include="System.Data.SqlClient" />
     <PackageReference Include="System.Net.Http" />
     <PackageReference Include="Microsoft.Azure.Kusto.Language" />
   </ItemGroup>
