--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -16,7 +16,7 @@
 		<Description>Provides message types and client/server APIs for the SqlTools Editor Services JSON protocol.</Description>
 		<!-- False alerts, disabled due to issue: https://github.com/dotnet/roslyn/issues/65850 -->
 		<NoWarn>$(NoWarn);CS8795</NoWarn>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -25,7 +25,7 @@
 
 	<PropertyGroup Condition="'$(BUILD_DOTNET_TOOL)' == 'true'">
 		<PackageId>Microsoft.SqlServer.SqlToolsServiceLayer.Tool</PackageId>
-		<PackageVersion>1.3.0</PackageVersion>
+		<PackageVersion>2.0.0</PackageVersion>
 		<PackageDescription>.NET client SQL Tools Service application, usable as a dotnet tool. This package is intended to be used by internal applications only and should not be referenced directly.</PackageDescription>
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>$(AssemblyName)</ToolCommandName>
@@ -45,7 +45,7 @@
 		<PackageReference Include="Microsoft.SqlServer.DacFx" />
 		<PackageReference Include="Microsoft.SqlServer.DacFx.Projects" />
 		<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" />
-		<PackageReference Include="Microsoft.Data.SqlClient" />
+		<PackageReference Include="Microsoft.Data.SqlClient" VersionOverride="5.2.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" />
 		<PackageReference Include="Microsoft.SqlServer.Management.QueryStoreModel" />
 		<PackageReference Include="Microsoft.SqlServer.Management.SmoMetadataProvider" />
@@ -53,7 +53,7 @@
 		<PackageReference Include="Microsoft.SqlServer.Management.SqlParser" />
 		<PackageReference Include="SkiaSharp" />
 		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Condition="$([MSBuild]::IsOsPlatform('Linux'))" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" VersionOverride="8.0.0" />
 		<PackageReference Include="System.Text.Encoding.CodePages" />
 		<PackageReference Include="Microsoft.SqlServer.XEvent.XELite" />
 		<PackageReference Include="Microsoft.SqlServer.TransactSql.ScriptDom.NRT">
