--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -45,7 +45,7 @@
 		<PackageReference Include="Microsoft.SqlServer.DacFx" />
 		<PackageReference Include="Microsoft.SqlServer.DacFx.Projects" />
 		<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" />
-		<PackageReference Include="Microsoft.Data.SqlClient" VersionOverride="5.2.0" />
+		<PackageReference Include="Microsoft.Data.SqlClient" />
 		<PackageReference Include="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" />
 		<PackageReference Include="Microsoft.SqlServer.Management.QueryStoreModel" />
 		<PackageReference Include="Microsoft.SqlServer.Management.SmoMetadataProvider" />
