Uopdate build platforms

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -2,19 +2,14 @@ parameters:
   - name: platforms
     type: object
     default:
-    - name: 'osx.10.11-x64'
-      displayName: 'osx'
+    - name: 'osx-x64'
+      displayName: 'OSX 64 bit'
       archiveName: 'osx-x64'
       archiveFileFormat: 'tar.gz'
       archiveType: 'tar'
     - name: 'osx-arm64'
-      displayName: 'osx arm'
+      displayName: 'OSX ARM 64 bit'
       archiveName: 'osx-arm64-unsigned'
-      archiveFileFormat: 'tar.gz'
-      archiveType: 'tar'
-    - name: 'rhel.7.2-x64'
-      displayName: 'rhel'
-      archiveName: 'rhel-x64'
       archiveFileFormat: 'tar.gz'
       archiveType: 'tar'
     - name: 'win-x64'
@@ -32,6 +27,11 @@ parameters:
       displayName: 'Windows ARM 64 bit'
       archiveFileFormat: 'zip'
       archiveType: 'zip'
+    - name: 'linux-x64'
+      displayName: 'Linux 64 bit'
+      archiveName: 'linux-x64'
+      archiveFileFormat: 'tar.gz'
+      archiveType: 'tar'
     - name: 'linux-arm64'
       archiveName: 'linux-arm64'
       displayName: 'Linux ARM 64 bit'
